# Gaemi-01

./: .gitignore  CMakeLists.txt  Readme.md
GEngine/: CMakeLists.txt
GEngine/src/: Asserts.h  Defines.h  Engine.cpp  Engine.h  Entry.cpp  Entry.h  EventManager.cpp  EventSystem.cpp  EventSystem.h  Events.h  Game.h  GameTypes.h  Locator.cpp  Locator.h  Log.cpp  Log.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  MemoryTag.h  Timer.cpp  Timer.h  Window.cpp  Window.h
GEngine/src/asset/: AssetManager.cpp  AssetManager.h  Assets.cpp  Assets.h  CMakeLists.txt
GEngine/src/input/: CMakeLists.txt  ControllerState.cpp  ControllerState.h  InputManager.cpp  InputManager.h  InputSystem.cpp  InputSystem.h  KeyboardState.cpp  KeyboardState.h  MouseState.cpp  MouseState.h
GEngine/src/math/: Functions.cpp  Functions.h  Transformations.cpp  Transformations.h  Types.h
GEngine/src/mem/: CMakeLists.txt  Memory.h  MemoryManager.cpp  MemoryManager.h  MemoryTag.h
GEngine/src/render/: CMakeLists.txt  RendererBackEnd.h  RendererFrontEnd.cpp  RendererFrontEnd.h  Types.h
GEngine/src/render/vk/: Buffer.cpp  Buffer.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  Context.cpp  Context.h  DeletionQueue.h  Fence.cpp  Fence.h  Framebuffer.cpp  Framebuffer.h  GameObject.h  Init.cpp  Init.h  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  PipelineBuilder.cpp  PipelineBuilder.h  RenderObject.h  RenderPass.cpp  RenderPass.h  RendererBackEndVulkan.cpp  RendererBackEndVulkan.h  Renderpass.cpp  Renderpass.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Texture.h  Types.h  VkContext.cpp  VkContext.h  VkInit.cpp  VkSwapchain.cpp  VkSwapchain.h
GEngine/src/renderer/: Types.h
GEngine/src/renderer/vk/: DeletionQueue.h  Mesh.cpp  Mesh.h  PipelineBuilder.cpp  PipelineBuilder.h  RenderObject.h  Types.h  VkInit.cpp  VkInit.h
GEngine/src/vk/: Mesh.cpp  PipelineBuilder.cpp  PipelineBuilder.h  Types.h  VkInit.cpp
GGame/: CMakeLists.txt
GGame/src/: Game.cpp  Game.h  GameImpl.cpp  GameImpl.h  Main.cpp
GTestBed/: CMakeLists.txt
GTestBed/src/: GameImpl.cpp  GameImpl.h  Main.cpp
_VsCode/src/engine/: sprite.cpp
_ogl/_VsCode/src/engine/: game.h  math_core.h
_ogl/_VsCode/src/game/: gamestate_main.cpp
doc/: CodeConventions.md  Setup.md
shaders/: default.frag  defaultLit.frag  defaultSave.frag  redTriangle.frag  redTriangle.vert  triMesh.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt  Log.cpp  Log.h  Main.cpp  main.cpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.h  Game.h  Log.cpp  Log.h  Timer.cpp  Timer.h  Types.h  VkInit.cpp  VkInit.h  VkPipelineBuilder.cpp  VkPipelineBuilder.h  Window.cpp  Window.h  batch.cpp  batch.h  batch_config.h  batch_manager.cpp  batch_manager.h  batch_sprite_vertex.h  maths.h  rectangle.h  renderer_geometry.cpp  sprite.cpp  sprite.h  sprite_batch.h  spritebatch.cpp  spritebatch.h  vertex2d.h  window_sdl.cpp
src/engine/input/: ControllerState.cpp  ControllerState.h  InputSystem.cpp  InputSystem.h  KeyboardState.cpp  KeyboardState.h
src/engine/math/: CMakeLists.txt  Functions.h  Transformations.cpp  Types.h
src/engine/vk/: CMakeLists.txt  DeletionQueue.h  Mesh.cpp  Mesh.h  PipelineBuilder.cpp  PipelineBuilder.h  RenderObject.h  Types.h  VkInit.cpp  VkInit.h  VkPipelineBuilder.cpp  VkPipelineBuilder.h
src/game/: CMakeLists.txt  Game.cpp  game.cpp  gamestate_main.cpp  gamestate_main.h
